aws/angular-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angularapp
  labels:
    app: angularapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angularapp
  template:
    metadata:
      name: angularapp
      labels:
        app: angularapp
    spec:
      containers:
        - name: angularapp
          image: macktb/food-delivery-app-fe:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  selector:
    app: angularapp
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
