aws/eureka-manifest.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
spec:
  serviceName: eureka-service
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: macktb/eureka-service:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
---

apiVersion: v1
kind: Service
metadata:
  name: eureka-service
  labels:
    app: eureka-service
spec:
  ports:
    - port: 8761
      protocol: TCP
      targetPort: 8761
  selector:
    app: eureka
