aws/foodcatalogue-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foodcatalogueapp
  labels:
    app: foodcatalogueapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foodcatalogueapp
  template:
    metadata:
      name: foodcatalogueapp
      labels:
        app: foodcatalogueapp
    spec:
      containers:
        - name: foodcatalogueapp
          image: macktb/foodcatalogue-service:6
          imagePullPolicy: Always
          ports:
            - containerPort: 9093
---
apiVersion: v1
kind: Service
metadata:
  name: foodcatalogue-service
spec:
  ports:
    - port: 9093
      protocol: TCP
      targetPort: 9093
  selector:
    app: foodcatalogueapp
