aws/order-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderapp
  labels:
    app: orderapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderapp
  template:
    metadata:
      name: orderapp
      labels:
        app: orderapp
    spec:
      containers:
        - name: orderapp
          image: macktb/order-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: orderapp
  ports:
    - port: 9094
      protocol: TCP
      targetPort: 9094
