aws/user-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapp
  labels:
    app: userapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userapp
  template:
    metadata:
      name: userapp
      labels:
        app: userapp
    spec:
      containers:
        - name: userapp
          image: macktb/user-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: userapp
